# UnderwaterSlam

./: CMakeLists.txt  README.md  package.xml
bashScript/: runCommans.bash
cfg/: ekfnoise.cfg
include/: PeakFinder.h  edge.h  ekf.h  ekfDVL.h  generalHelpfulTools.h  generalStructs.h  graphSlamSaveStructure.h  hilbertMap.h  pose.h  scanRegistrationClass.h  slamToolsRos.h  sofftCorrelationClass.h  softDescriptorRegistration.h  vertex.h
launch/: ekfStart.launch  startingstPereDataWithEKF.launch
pythonFiles/: fixRosbags.py  rosbagApplication.py  testFIle.py
rvizconfig/: correctionPCL.rviz  hilbertMapOccupency.rviz  registrationPCL.rviz  slamView.rviz
src/EKF/: ekfDVL.cpp  ekfDVL.h  ekfDVLnode.cpp  ekfPos.cpp  testEKF.cpp
src/completeSlamRuns/: caveDatasetSLAM.cpp  completlyFailedMapMatching.cpp  duoSonarSLAM.cpp  ekfGraphSlam.cpp  graphSlamGTSAM.cpp  graphSlamWithExternalStateEstimator.cpp  graphSlamWithROS.cpp  graphSlam_W_E_E_IntensitiesOnly.cpp  rosSlamExp1.cpp  rosSlamExp2.cpp  rosSlamExp3.cpp  slamOfLabyrinth01.cpp  stPereDatasetPublishingRos.cpp  stPereDatasetSlam.cpp  testSLAMRUNS.cpp
src/evaluation/: 2DOurMethod.cpp  2DOurMethodTesting.cpp  compareEveryMatchingMethodBasedOnFolder.cpp  comparisonEveryMatchingMethod.cpp  consecutiveScansMatchingMethod.cpp  consecutiveScansSLAMCalc.cpp  consecutiveScansSimulation.cpp  consecutiveScansTUHH.cpp  continousMapGeneration.cpp  createImageOfWholeBunker.cpp  createImageOfWholeBunker2.cpp  createImageSimulation.cpp  extractingCorrectedDataForRegistration.cpp  extractingCorrectedDataForRegistration2_0.cpp  extractingGraphDataForPlotting.cpp  extractingScanDataForPlotting.cpp  readInCSVAndPublishToTopics.cpp  testRosbagReading.cpp
src/generalHelpfulTools/include/: generalHelpfulTools.h
src/generalHelpfulTools/src/: generalHelpfulTools.cpp
src/generalInterface/include/: generalStructs.h
src/gtsamTests/: simpleExample.cpp
src/hilbertMaps/include/: hilbertMap.h
src/hilbertMapssrc/: hilbertMap.cpp
src/movementCorrection/: compensationSonarDataWithEKF.cpp  correctionPCLSTPere.cpp
src/perception_oru/ndt_fuser/include/: ndt_fuser.h
src/perception_oru/ndt_map/include/: adaptive_oc_tree.h  cell_vector.h  depth_camera.h  lazy_grid.h  ndt_cell.h  ndt_histogram.h  ndt_map.h  ndt_map_hmt.h  ndt_occupancy_map.h  oc_tree.h
src/perception_oru/ndt_map/include/impl/: adaptive_oc_tree.cpp  cell_vector.cpp  lazy_grid.cpp  ndt_cell.cpp  ndt_cell.hpp  ndt_histogram.cpp  ndt_map.cpp  ndt_map.hpp  ndt_map_hmt.cpp  ndt_map_hmt.hpp  ndt_occupancy_map.cpp  oc_tree.cpp
src/perception_oru/ndt_registration/include/: ndt_map_matcher_d2d_2d.h  ndt_matcher_d2d.h  ndt_matcher_d2d_2d.h  ndt_matcher_d2d_feature.h  ndt_matcher_p2d.h
src/perception_oru/ndt_registration/include/impl/: ndt_matcher_d2d.cpp  ndt_matcher_d2d.hpp  ndt_matcher_d2d_2d.cpp  ndt_matcher_d2d_2d.hpp  ndt_matcher_d2d_feature.cpp  ndt_matcher_p2d.cpp  ndt_matcher_p2d.hpp
src/perception_oru/ndt_registration/test/: ndt_registration_test.cc  simple.cc
src/perception_oru/pointcloud_vrml/include/: pointcloud_utils.h
src/perception_oru/pointcloud_vrml/include/impl/: pointcloud_utils.cpp
src/poseGraph/: edge.cpp  graphSlamSaveStructure.cpp  vertex.cpp
src/poseGraph/include/: edge.h  graphSlamSaveStructure.h  vertex.h
src/poseGraph/src/: edge.cpp  graphSlamSaveStructure.cpp  vertex.cpp
src/poseGraphsrc/: edge.cpp  graphSlamSaveStructure.cpp  vertex.cpp
src/registration/: correlationRotationSoft20.cpp  registrationOfStPereOnlyMatching.cpp  registrationOfTwoImageScans.cpp  registrationOfTwoPCLScans.cpp  registrationOfTwoScans.cpp  registrationTwoImagesCSV.cpp  registrationTwoPCLScansIPC.cpp  registrationTwoScansIPC.cpp  scanRegistrationClass.cpp  sofftCorrelationClass.cpp  softDescriptorRegistration.cpp  testFeatureRegistration.cpp  testFileForOPENGR.cpp  testingOfSoftDescriptorClass.cpp  understanding3Dso3soft.cpp
src/registration/FMSOld/: image_dft.cpp  image_main.cpp  image_registration.cpp  image_registration.h
src/registration/include/: scanRegistrationClass.h  softDescriptorRegistration.h
src/registration/src/: image_dft.cpp  scanRegistrationClass.cpp  softDescriptorRegistration.cpp
src/slamTools/: PeakFinder.cpp  generalHelpfulTools.cpp  generalHelpfulTools.h  slamToolsRos.cpp  slamToolsRos.h
src/slamTools/include/: slamToolsRos.h
src/slamTools/src/: slamToolsRos.cpp
src/stPereDataset/: stPereDatasetPublication.cpp  stPereDatasetPublishingRos.cpp
src/testFiles/: graphOptimizationTest.cpp  hilbertMapExample.cpp  stPereDatasetPublication.cpp  testFile.cpp  testFile1.cpp  testFile2.cpp
