<?xml version="1.0"?>
<package format="3">
  <name>underwaterslam</name>
  <version>0.0.0</version>
  <license>BSD</license>
  <description>The simulation_bluerov package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tim@todo.todo">tim</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
<!--  <depend>commonbluerovmsg</depend>-->
  <depend>visualization_msgs</depend>
  <depend>ping360_sonar_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
